--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -60,7 +60,7 @@ blocks:
           os_image: ubuntu2004
         containers:
           - name: main
-            image: 'registry.semaphoreci.com/android:30'
+            image: 'registry.semaphoreci.com/redis:6.0'
       jobs:
         - name: 'Job #1'
           commands:
